added link for other tasks from 5th lesson

--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -101,6 +101,9 @@
 					одиночний корабель на полі розміром N*M. Маючи К снарядів користувач
 					намагається потопити корабель.</a>
 			</li>
+			<li>
+				<a target="_blank" href="../additionalTasks/lesson5/index.html">Інші завдання.</a>
+			</li>
 		</ol>
 	</div>
 </body>
