added links for other tasks from 5th lesson

--- a/additionalTasks/lesson5/tasks/task1.html
+++ b/additionalTasks/lesson5/tasks/task1.html
@@ -76,7 +76,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №1(-2). Задача -2. Поступово генерувати 100 випадкових чисел від 1 до 1000. Підрахувати яких чисел
+		<h1>Задача №1(-2). Поступово генерувати 100 випадкових чисел від 1 до 1000. Підрахувати яких чисел
 			більше: парних чи непарних.</h1>
 		<script>
 
