--- a/additionalTasks/lesson5/index.html
+++ b/additionalTasks/lesson5/index.html
@@ -73,22 +73,62 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Домашні завдання (Урок №5).</h1>
+		<h1>Інші домашні завдання (Урок №5).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task1.html">Задача . </a>
+				<a target="_blank" href="./tasks/task1.html">Задача №1(-2). Поступово генерувати 100 випадкових чисел від
+					1 до 1000. Підрахувати яких чисел більше: парних чи непарних.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task2.html">Задача № .</a>
+				<a target="_blank" href="./tasks/task2.html">Задача №2(-1). Вивести на екран номери місяців весни і літа (від 3
+					до 8)</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task3.html">Задача № .</a>
+				<a target="_blank" href="./tasks/task3.html">Задача №3(0).Вивести на екран 8 кнопок з написом “Hello”.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task4.html">Задача №.</a>
+				<a target="_blank" href="./tasks/task4.html">Задача №4(1). Вивести з використанням циклів маркований список з
+					випадковими числами (1-100). Кількість випадкових чисел
+					вводиться користувачем.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task5.html">Задача №.</a>
+				<a target="_blank" href="./tasks/task5.html">Задача №5(2). Створити 10 елементів для введення цін продуктів</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task6.html">Задача №6(3). Вивести таблицю з одним рядком і 7 стовпцями.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task7.html">Задача №7(4).Вивести таблицю з 3 рядків і 7 стовпців.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task8.html">Задача №8(5).Вивести таблицю.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task9.html">Задача №9(7). Вивести на екран N абзаців (N вводиться користувачем)
+					за зразком:</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task10.html">Задача №10(8).Користувач загадує число. За 3 спроби комп’ютер
+					намагається вгадати число користувача (використати confirm).</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task11.html">Задача №11(10).Задача 10. Знайти суму всіх непарних чисел, що
+					знаходяться між заданими користувачем числами.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task12.html">Задача №12(14). Каса. Користувачу повідомляють суму, яку йому
+					треба сплатити. Користувач поступово вводить суму грошей до тих пір,
+					поки суми не буде достатньо для оплати товарів (кожного разу користувачу повідомляють, яку ще суму потрібно
+					ввести).</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task13.html">Задача №13(15).Користувача поступово вводить показники температури
+					протягом року. Знайти середню температуру.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task14.html">Задача №14(16). Користувач поступово вводить прибуток магазину за
+					кожен день протягом N тижнів. Знайти загальну величину прибутку та
+					вивести величину прибутку протягом кожного окремого тижня.</a>
 			</li>
 		</ol>
 	</div>
