--- a/lesson5/tasks/task1.html
+++ b/lesson5/tasks/task1.html
@@ -66,6 +66,11 @@
 			border-collapse: collapse;
 		}
 
+		table {
+			display: inline-block;
+			margin: 10px;
+		}
+
 		.container {
 			max-width: 1100px;
 			margin: 0 auto;
@@ -82,9 +87,7 @@
 			// 1 2 3	10 11 12	19 20 21
 			// 4 5 6	13 14 15	22 23 24
 			// 7 8 9	16 17 18	25 26 27
-
-			document.write('<div class="container">')
-			document.write('<table style="display: inline-block; margin:10px;">')
+			document.write('<table>')
 			for (let tableRow = 0; tableRow < 1; tableRow++) {
 				document.write('<tr>')
 				for (let tableColumn = 1; tableColumn <= 3; tableColumn++) {
@@ -103,7 +106,7 @@
 				document.write('</tr>')
 			}
 			document.write('</table>')
-			document.write('<table style="display: inline-block;margin:10px;">')
+			document.write('<table>')
 			for (let tableRow = 0; tableRow < 1; tableRow++) {
 				document.write('<tr>')
 				for (let tableColumn = 10; tableColumn <= 12; tableColumn++) {
@@ -122,7 +125,7 @@
 				document.write('</tr>')
 			}
 			document.write('</table>')
-			document.write('<table style="display: inline-block;margin:10px;">')
+			document.write('<table>')
 			for (let tableRow = 0; tableRow < 1; tableRow++) {
 				document.write('<tr>')
 				for (let tableColumn = 19; tableColumn <= 21; tableColumn++) {
@@ -141,7 +144,7 @@
 				document.write('</tr>')
 			}
 			document.write('</table>')
-			document.write('</div>')
+
 		</script>
 	</div>
 </body>
