--- a/additionalTasks/lesson5/tasks/task10.html
+++ b/additionalTasks/lesson5/tasks/task10.html
@@ -88,7 +88,36 @@
 		<h1>Задача №10(8).Користувач загадує число. За 3 спроби комп’ютер
 			намагається вгадати число користувача (використати confirm).</h1>
 		<script>
+			// Алгоритм
+			// Попросити користувача загадати число від 1 до 10 за допомогою confirm = rememberedUserNumber
+			// Робимо перевірку якщо rememberedUserNumber === true
+			// Оголошуємо змінну attemptCounter  і присвоюємо їй значення 0
+			//    запускаємо цикл while поки attemptCounter не буде = 3
+			//       генеруємо випадкове число від 1 до 10, randomPCNumber
+			//       виводимо на екран за допомогою confirm
+			//       якщо randomNumber === true
+			//              - вивід повідомлення, що переміг ПК
+			//              - переривання циклу - break
+			//       інакше якщо attemptCounter === 3
+			//              - переміг користувач
+			let rememberedUserNumber = confirm('Загадайте число від 1 до 10')
 
+			if (rememberedUserNumber === true) {
+				let attemptCounter = 0
+				while (attemptCounter < 3) {
+					attemptCounter++
+					let min = 1
+					let max = 10
+					let randomNumber = Math.floor(Math.random() * (max - min + 1) + min)
+					let attempt = confirm(`Ваше число = ${randomNumber}`)
+					if (attempt === true) {
+						alert('PC WIN')
+						break
+					} else if (attemptCounter === 3)
+						alert('Ви перемогли')
+				}
+			} else
+				alert('перезавантажте сторінку, щоб спробувати знову')
 		</script>
 	</div>
 </body>
