added solution for the task no.14

--- a/additionalTasks/lesson5/tasks/task12.html
+++ b/additionalTasks/lesson5/tasks/task12.html
@@ -90,7 +90,23 @@
 			поки суми не буде достатньо для оплати товарів (кожного разу користувачу повідомляють, яку ще суму потрібно
 			ввести).</h1>
 		<script>
+			//14. Каса. Користувачу повідомляють суму, яку йому треба сплатити. Користувач поступово вводить суму грошей до тих пір, поки суми не буде достатньо для оплати товарів (кожного разу користувачу повідомляють, яку ще суму потрібно ввести).
+			// Алгоритм
+			// Повідомлення про суму яку необхідно внести в касу (генерація випадкової суми?)
+			// Поступове введення суми грошей в касу доки сума не буде достатньою для сплати
+			// Повідомлення про залишок після сплати
 
+			let min = 1
+			let max = 500
+			let amountToPay = Math.floor(Math.random() * (max - min + 1) + min)
+			let message = confirm(`Ваша сума до сплати ${amountToPay}`)
+			let leftToPay = 0
+			while (amountToPay > leftToPay) {
+				let enterTheAmount = parseInt(prompt('Внесіть суму'))
+				leftToPay += enterTheAmount
+				message = alert(`Залишок до сплати ${amountToPay - leftToPay}`)
+			}
+			message = alert('Дякуємо за покупку')
 		</script>
 	</div>
 </body>
