--- a/additionalTasks/lesson5/tasks/task14.html
+++ b/additionalTasks/lesson5/tasks/task14.html
@@ -89,7 +89,28 @@
 			кожен день протягом N тижнів. Знайти загальну величину прибутку та
 			вивести величину прибутку протягом кожного окремого тижня.</h1>
 		<script>
-
+			// Оголошення змінної для сукупного доходу магазину - totalShopIncome
+			// Вввести кількість тижнів для розрахунку
+			//    цикл тиває поки лічильник менше за кількість тижнів
+			//        оголошуємо змінну для доходу за тиждень
+			//        цикл триває від 1 до 7 (кількість днів у тижні)
+			//           вводимо суму доходу за день - incomePerDay
+			//           присвоюємо значення incomePerDay в змінну incomePerWeek
+			//         вивожимо на екран incomePerWeek
+			//         присвоюємо значення incomePerWeek в totalShopIncome
+			// виводимо totalShopIncome
+			let totalShopIncome = 0
+			let weeksNumber = parseInt(prompt('Enter number of weeks'))
+			for (let week = 1; week <= weeksNumber; week++) {
+				let incomePerWeek = 0
+				for (let day = 1; day <= 7; day++) {
+					let incomePerDay = parseFloat(prompt(`Enter income for ${day} day`))
+					incomePerWeek += incomePerDay
+				}
+				document.write(`<p>Income for ${week} week = ${incomePerWeek}</p>`)
+				totalShopIncome += incomePerWeek
+			}
+			document.write(`<p>Total shop income = ${totalShopIncome}</p>`)
 		</script>
 	</div>
 </body>
