added link for the additional tasks

--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -114,6 +114,9 @@
 					випадкового номера
 					дня (від 0 до 6).</a>
 			</li>
+			<li>
+				<a target="_blank" href="../additionalTasks/lesson2/index.html">Додаткові завдання</a>
+			</li>
 		</ol>
 	</div>
 </body>
