--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -108,6 +108,9 @@
 				<a target="_blank" href="./tasks/task7.html">Задача №7. З клавіатури вводиться номер місяця. Вивести до якої
 					пори він відноситься.</a>
 			</li>
+			<li>
+				<a target="_blank" href="../additionalTasks/lesson3/index.html">Додаткові завдання</a>
+			</li>
 		</ol>
 	</div>
 </body>
