updated links for additional tasks

--- a/additionalTasks/lesson2/index.html
+++ b/additionalTasks/lesson2/index.html
@@ -76,43 +76,56 @@
 		<h1>Урок №2.</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task1.html">Задча №0. Обчислити значення виразів.</a>
+				<a target="_blank" href="./tasks/task1.html">Задача №1. Дано ширину екрана та кількість елементів, які повинні
+					бути відображені у рядку. Визначити ширину
+					елементів, які повинні
+					бути відображені у цьому рядку.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task2.html">Задача №1. Знайти суму, добуток та частку двох дійсних чисел.
-					Результат вивести у
-					формі таблиці.</a>
+				<a target="_blank" href="./tasks/task2.html">Задача №2. З клавіатури вводиться розмір заробітної плати та розмір
+					прожиткового мінімуму. Визначити розмір
+					соціальної допомоги
+					(вважаємо, що заробітна плата є меншою).</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task3.html">Задача № 2. Дано рік народження (дата: 1 січня) та поточний рік.
-					Знайти кількість
-					років.</a>
+				<a target="_blank" href="./tasks/task3.html">Задача №3. З клавіатури вводяться вартість одиниці та кількість
+					одиниць двох товарів. Вивести на екран вартість
+					кожного з видів
+					товарів окремо і загальну вартість.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task4.html">Задача №3. Дано вартість одиниці товару і кількість. Знайти
-					загальну вартість та
-					ПДВ (5% від загальної вартості).</a>
+				<a target="_blank" href="./tasks/task4.html">Задача №4. З клавіатури вводиться вік дитини. Вивести на екран
+					через скільки років вона буде відвідувати
+					садочок, піде у школу,
+					закінчить школу, вступить і закінчить.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task5.html">Задача №4. Дано довжину у сантиметрах. Визначати скільки це метрів
-					і
-					кілометрів.</a>
+				<a target="_blank" href="./tasks/task5.html">Задача №5. Визначити, яку платню одержить на фірмі сумісник за
+					виконану роботу, якщо йому нараховано S грн., а податок становить 20%.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task6.html">Задача №5. Дано кількість секунд, що пройшла від початку доби.
-					Визначити скільки це
-					годин і хвилин.</a>
+				<a target="_blank" href="./tasks/task6.html">Задача №6. Дано три дійсні змінні a, b і c. Скласти алгоритм, який
+					міняє місцями значення цих змінних наступним
+					чином: змінна a
+					набуває значення змінної b, змінна b набуває значення змінної c, а змінна c – попереднє значення змінної
+					a.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task7.html">Задача №6. З клавіатури вводяться вартість товару та кількість
-					одиниць 3 товарів.
-					Обчислити вартість кожного товару
-					окремо та загальну вартість. Вивести чек (як у супермаркеті) використовуючи елементи розмітки.</a>
+				<a target="_blank" href="./tasks/task7.html">Задача №7. Скласти алгоритм, який обчислює цілу і дробову частину
+					даного числа х. Наприклад: число 23,56 =>
+					ціла: 23, дробова: 0,56.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task8.html">Задача 8. Знайти суму випадкового номера місяця (від 1 до 12) та
-					випадкового номера
-					дня (від 0 до 6).</a>
+				<a target="_blank" href="./tasks/task10.html">Задача №10. З клавіатури вводиться кількість монет номіналом 1
+					копійка. Визначити скільки гривень і копійок є у
+					даній сумі .
+					Наприклад, дано 245 копійок, а вивести 2 грн 45 копійок.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task12.html">Задача №12. З клавіатури вводиться кількість монет номіналом 2
+					копійки (5коп, 25коп, 50 коп). Визначити скільки
+					гривень і копійок є
+					у даній сумі.</a>
 			</li>
 		</ol>
 	</div>
