upadated links for the 3rd lesson addtional tasks

--- a/additionalTasks/lesson3/index.html
+++ b/additionalTasks/lesson3/index.html
@@ -76,25 +76,48 @@
 		<h1>Додаткові домашні завдання (Урок №3).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task1.html">Задача № 1. </a>
+				<a target="_blank" href="./tasks/task1.html">Задача №1.На екран виводиться меню: 1. Веселий, 2. Сумний, 3.
+					Обурений. Користувач вводить номер пункту меню і
+					на екрані з’являється відповідне зображення смайла.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task2.html">Задача № 2..</a>
+				<a target="_blank" href="./tasks/task2.html">Задача №2. Комп’ютер випадковим чином вибирає початок і кінець
+					проміжку (проміжок повинен знаходитися в межах
+					від 1 до
+					100). Користувач вводить число і виграє, якщо число знаходиться у цьому проміжку, або розташоване від нього
+					(від
+					лівого
+					або правого краю) не більше ніж на 10.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task3.html">Задача № 3. .</a>
+				<a target="_blank" href="./tasks/task3.html">Задача №3. Комп’ютер загадує число від 1 до 10. Двоє користувачів
+					надають свої відповіді. Виграє той, у кого
+					число знаходиться
+					ближче до загаданого комп’ютером числа.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task4.html">Задача №4. </a>
+				<a target="_blank" href="./tasks/task4.html">Задача №4. Морський бій. Ворожий корабель, може знаходитись в
+					одному із квадратів (кількість квадратів вводиться
+					з клавіатури), які
+					розташовані лінійно (один за одним) на річці. </a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task5.html">Задача №5. </a>
+				<a target="_blank" href="./tasks/task5.html">Задача №5. Морський бій. Модифікувати попередню задачу з можливістю
+					після пострілу переміщення корабля у
+					випадковим чином вибрану сусідню
+					клітинку (якщо звичайно корабель не було потоплено за першим разом).</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task6.html">Задача №6. .</a>
+				<a target="_blank" href="./tasks/task8.html">Задача №8. З клавіатури вводиться кількість сторін багатокутника.
+					Необхідно вивести назву фігури («трикутник»,
+					«чотирикутник»,
+					«п’ятикутинк», «шестикутник»).</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task7.html">Задача №7. З.</a>
+				<a target="_blank" href="./tasks/task9.html">Задача №9. З клавіатури вводиться перша літера розширення файлу
+					(«html», «doc», «jpeg», «mp3», «xls»). Вивести
+					на екран назву
+					програми, яка може відкрити цей тип файлу.</a>
 			</li>
 		</ol>
 	</div>
